SDKs/twilio.com/twilio_chat_v3/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            UpdateChannelRequest req = new UpdateChannelRequest() {{
                security = new UpdateChannelSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new UpdateChannelPathParams() {{
                    serviceSid = "sit";
                    sid = "voluptas";
                }};
                headers = new UpdateChannelHeaders() {{
                    xTwilioWebhookEnabled = "false";
                }};
                request = new UpdateChannelUpdateChannelRequest() {{
                    messagingServiceSid = "expedita";
                    type = "private";
                }};
            }};

            UpdateChannelResponse res = sdk.updateChannel(req);

            if (res.chatV3Channel.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `updateChannel` - Update a specific Channel.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
